--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,10 @@
-language: node_js
-node_js:
-  - "4.2.3"
-before_script:
-  - npm install grunt-cli -g
-install: npm install
 language: c
 
 install:
     - make 
 
 script:
-    - "./hello"
+    - "./hello world"
 
 after_failure:
     - email
